# CBX

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  JenkinsfileTemplate  README.md  cbx_version.h  platform_config.cmake  platform_config.shared.cmake  platform_config.static.cmake
cmake/: component.cmake  new_component.cmake
lib/: libraries.cmake
src/: CMakeLists.txt  components.cmake
src/common/: CMakeLists.txt  logging.cpp  objects.cmake  vector.cpp  version.cpp
src/common/include/: __version.hpp  __version.out.hpp  constants.hpp  include.cmake  logging.hpp  membuf.hpp  transform_matrix.hpp  types.hpp  vector.hpp  version.hpp
src/common/include/public/: __version.h  export.h  public.cmake  version.h
src/common/tests/: test.cpp  test_public.cpp  tests.cmake
src/main/: CMakeLists.txt  dll_main.cpp  main.cpp  objects.cmake
src/main/tests/: dll_test.cpp  tests.cmake
src/p3d/: CMakeLists.txt  animation.cpp  compressed_base.cpp  lod_info.cpp  model.cpp  model_info.cpp  objects.cmake  parser.cpp  skeleton.cpp
src/p3d/include/: animation.hpp  compressed.hpp  compressed_base.hpp  include.cmake  lod_info.hpp  lod_types.hpp  model.hpp  model_info.hpp  parser.hpp  read_helpers.hpp  skeleton.hpp
src/p3d/include/public/: public.cmake
src/pbo/: CMakeLists.txt  archive.cpp  fileloader.cpp  objects.cmake  search.cpp
src/pbo/include/: archive.hpp  fileloader.hpp  include.cmake  search.hpp
src/pbo/include/public/: public.cmake
src/wrp/: CMakeLists.txt  landscape.cpp  objects.cmake
src/wrp/include/: include.cmake  landscape.hpp
src/wrp/include/public/: public.cmake
templates/: platform_config.in.h
templates/template_component/: CMakeLists.txt  __cbx__component.cpp  objects.cmake
templates/template_component/include/: __cbx__component.h  include.cmake
templates/template_component/include/public/: __idi__component_public.h  public.cmake
templates/template_component/tests/: test.cpp  test_public.cpp  tests.cmake
